# slur

./: Cargo.toml
benches/: iai.rs  iai_simd.rs
src/: color.rs  iter.rs  lib.rs  test.rs  traits.rs
src/color/: serial.rs  simd.rs
